# BridgeAid

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  EXTRACTED_WORKFLOW.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
.github/workflows/: docs-guard.yml
backend/app/: __init__.py  config.py  db.py  factory.py  importer.py  main.py  recommendation.py  reminder_delivery.py  reminders.py  runtime.py  service_catalog.py
data/reference/: minimum_living_cost.json
data/schemas/: reference-dataset.schema.json  service-rule.schema.json
data/services/: emergency_aid_taipei.json  long_term_care_central.json  low_income_living_taipei.json  (+3 more)
db/: schema.sql
demo/: app.js  chat.js  core.js  index.html  reminders.js  render.js  services.js  styles.css
docs/: BridgeAid_主動式公共服務導航企畫書_檢視版.docx  architecture.md  conventions.md  data.md  decisions.md  dependencies.md  design-system.md  index.md  project.md  release.md  security.md  testing-edge-cases.md  testing.md  ui.md
scripts/: deploy.env.example  deploy.sh
tests/: test_api.py  test_chat_api.py  test_config.py  test_conversation.py  test_demo_scenarios.py  test_demo_ui.py  test_evaluator.py  test_importer.py  test_intent.py  test_line_client.py  test_line_flex.py  test_line_postback.py  test_line_webhook.py  test_ollama_intent.py  test_profile_commands.py  test_recommendation.py  test_references.py  test_reminder_delivery.py  test_reminders.py  test_reminders_api.py  test_schema.py  test_set_webhook.py
worker/: index.ts
(+50 files in other folders)
