[project]
name = "bridgeaid"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "jsonschema>=4.26.0",
    "keyring>=25.7.0",
    "psycopg[binary]>=3.3.4",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The `app` package lives under backend/; installed editable so `app` imports
# everywhere (uvicorn app.main:app, python -m app.importer, pytest).
packages = ["backend/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["backend", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
